--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@
 		line-height: 1;
 	}
 
-	ol, ul {
+	ol, ul, li {
 		list-style: none;
 	}
 
@@ -3106,3 +3106,25 @@
 			}
 
 	}
+
+.group:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.skills-list {
+	width: 100%;
+	margin: auto;
+}
+
+.skills-list li {
+	float: left;
+	padding: 20px 30px;
+	text-align: center;
+}
+
+.skills-list img {
+	width: 80px;
+	height: 80px;
+}
